widget/android/AndroidLayerViewWrapper.cpp
@@ -60,7 +60,7 @@ AndroidGLController::ProvideEGLSurface()
     ASSERT_THREAD();
     AutoLocalJNIFrame jniFrame(mJEnv);
     jobject jObj = mJEnv->CallObjectMethod(mJObj, jProvideEGLSurfaceMethod);
-    if (jniFrame.CheckForException())
+    if (jniFrame.CheckForException() || !jObj)
         return NULL;
 
     return reinterpret_cast<EGLSurface>(mJEnv->GetIntField(jObj, jEGLSurfacePointerField));
