mobile/android/base/gfx/GLController.java
@@ -127,6 +127,12 @@ public class GLController {
      * caller assumes ownership of the surface once it is returned.
      * This function is invoked by JNI */
     private EGLSurface provideEGLSurface() {
+        synchronized (this) {
+            if (!mSurfaceValid) {
+                return null;
+            }
+        }
+
         if (mEGL == null) {
             initEGL();
         }
